# web-advanced-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: agent-teacher.mdc
data/postgres/: postmaster.pid
data/postgres/base/16384/: 1247  1249  1259  16385  16390  16392  16395  16397  16402  24598  24603  24620  2579  2604  2606  2608  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  pg_internal.init
data/postgres/base/5/: 2619
data/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
data/postgres/pg_stat/: pgstat.stat
data/redis/: dump.rdb
data/redis/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
migrations/: env.py
migrations/versions/: 6d3ef23c7033_add_review_table.py  ab6510af575b_adding_roles_to_user.py  b1c4314e61a9_implement_the_tag_entity.py  c76e62903566_init.py  d407cd19a692_relate_books_with_users.py  d486b8f505ab_improvements.py
src/bookly/: __init__.py  celery_task.py  config.py  errors.py  mail.py  middleware.py
src/bookly/auth/: dependencies.py  userController.py  userDto.py  userModel.py  userRepository.py  userRouter.py  userSchemas.py  utils.py
src/bookly/book/: BookControllers.py  BookModel.py  BookRepository.py  BookService.py  BooksDto.py  exceptions.py
src/bookly/db/: main.py  redis.py
src/bookly/reviews/: reviewController.py  reviewDto.py  reviewModel.py  reviewRepository.py
src/bookly/tags/: controller.py  dto.py  model.py  repository.py
(+7 files in other folders)
